fix the demo link of Ana and add Rachel Talk

--- a/index.html
+++ b/index.html
@@ -248,9 +248,10 @@ h2 ~ p { }
 				<section>
 					<h2> Interesting Talks </h2>
 					<ul>
-						<li> Ana Tudor does with CSS: https://vimeo.com/131664957</li>
+						<li> Ana Tudor does with CSS: https://codepen.io/thebabydino/#</li>
 						<li>Zoe Mickley Gillenwater: https://vimeo.com/131664957</li>
 						<li>Jen Simmons: https://www.youtube.com/watch?v=5Z7lSSMwRgo</li>
+						<li>Rachel Andrew: https://www.youtube.com/watch?v=ibeF6rbzD70 </li>
 					</ul>
 				</section>
 				<section style="text-align: left;">
